Changement h1,h2,h3 etc + style refait

--- a/assets/style.css
+++ b/assets/style.css
@@ -18,31 +18,25 @@ body {
 	padding-block: 30px;
 	align-items: center;
 }
-
 .top-header .name {
 	font-size: 26px;
 }
-
 .nav ul {
 	display: flex;
 	list-style-type: none;
 	font-size: 14px;
 	margin-bottom: 0;
 }
-
 .nav li {
 	padding-inline: 10px;
 }
-
 .nav a {
 	text-decoration: none;
 	color: #000
 }
-
 .social-link img {
 	width: 20px;
 }
-
 #about {
 	display: flex;
 	background-color: #F6D2B8;
@@ -61,13 +55,11 @@ body {
 	left: 0;
 	z-index: -1;
 }
-
 .picture {
 	flex: 1;
 	margin: 0 20px;
 	z-index: 0;
 }
-
 .picture img {
 	width: 100%;
 
@@ -84,19 +76,17 @@ body {
 	font-family: 'Spectral';
 	font-weight: 800;
 	font-style: italic;
+	font-size: 1rem;
 	width: 60%;
 }
 #about-me p {
 	width: 80%;
 	font-size: 14px;
 }
-
- /* #gallery {
-		min-height: 100vh; 
- } */
 .title{
 	text-align: center;
 	padding-block: 2em;
+	font-size: 1.75em;
 }
 .gallery .nav {
 	justify-content: center;
@@ -106,23 +96,14 @@ body {
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
-/* test */
-/* .nav-pills .nav-link:hover{
-	color: #fff;
-	background-color: #BEB45A;
-	border-radius:0;
-	
-} */
-/* .nav-link.active.active-tag{
-	color: #fff;
-	background-color: #BEB45A;
-	border-radius:0 
-} */
-/* fin test */
 .nav-pills .nav-link {
 	color: #000;
 	cursor: pointer;
-
+}
+.nav-link:hover{
+	color: #fff;
+	background-color: #BEB45A;
+	border-radius:0 ;
 }
 .item-column {
 	position: relative;
@@ -133,7 +114,6 @@ body {
 	content: "";
 	display: block;
 	padding-bottom: 100%;
-
 }
 .gallery-item {
 	position: absolute;
@@ -151,7 +131,6 @@ body {
 	display: flex;
 	font-size: 24px;
 }
-
 .quote {
 	font-family: 'Spectral';
 	font-style: italic;
@@ -163,14 +142,13 @@ body {
 	font-family: Spectral;
 	font-style: italic;
 	font-weight: 300;
-
+	font-size: 2.5rem;
 }
 .quote__author {
 	font-family: Spectral;
 	font-weight: 800;
 	font-size: 22px;
 }
-
 #services {
 	margin: auto;
 	background-color: #A8D5D8 ;
@@ -186,14 +164,11 @@ body {
 	left: 0;
 	z-index: 0;
 }
-
 #services .container {
 	justify-content: space-between;
 	display: flex;
 	padding : 2em 0;
-
 }
-
 .service {
 	background-color: white;
 	max-width: 390px;
@@ -205,7 +180,9 @@ body {
 	justify-content: space-between;
 	z-index: 1;
 }
-
+.service__price h5{
+	font-size: 1.5rem;
+}
 #contact {
 	margin: auto;
 	background-color: #D8D3A8 ;
@@ -213,7 +190,6 @@ body {
 	padding-inline: 100px;
 	padding-block: 100px;
 }
-
 #contact .container {
 	display: flex;
 }
@@ -229,7 +205,6 @@ body {
 }
 .form-container {
 	flex : 2;
-
 }
 form {
 	display: flex;
@@ -237,7 +212,6 @@ form {
 	width: 70%;
 	align-items: flex-start;
 }
-
 form input {
 	width: 100%;
 	background-color: transparent;
@@ -245,7 +219,6 @@ form input {
 	height: 2.5em;
 	margin-bottom: 20px;
 }
-
 form textarea {
 	width: 100%;
 	background-color: transparent;
@@ -259,7 +232,6 @@ input[type="submit"] {
 	background-color: #BEB45A;
 	padding: .5em 1em
 }
-
 @media all and (max-width: 1180px) {
 	.picture {
 		flex : 2;
@@ -275,11 +247,9 @@ input[type="submit"] {
 		width: 100%;
 	}
 }
-
 @media all and (max-width: 1000px) {
 	#about{
 		flex-direction: column;
-
 	}
 	.picture {
 		width: 50%;
@@ -318,7 +288,6 @@ input[type="submit"] {
 		left: auto;
 		z-index: 0;
 	}
-
 	#contact .container {
 		flex-direction: column;
 	}
@@ -334,7 +303,6 @@ input[type="submit"] {
 		z-index: -1;
 	}
 }
-
 @media all and (max-width: 650px) {
 	.top-header {
 		flex-direction: column;
@@ -369,4 +337,3 @@ input[type="submit"] {
 		width: 80%;
 	}
 }
-
