--- a/assets/style.css
+++ b/assets/style.css
@@ -92,7 +92,7 @@ body {
 	justify-content: center;
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-	color: #fff;
+	color: black;
 	background-color: #BEB45A;
 	border-radius:0 ;
 }
@@ -180,7 +180,7 @@ body {
 	justify-content: space-between;
 	z-index: 1;
 }
-.service__price h5{
+.service__price h3{
 	font-size: 1.5rem;
 }
 #contact {
@@ -231,6 +231,9 @@ form textarea {
 input[type="submit"] {
 	background-color: #BEB45A;
 	padding: .5em 1em
+}
+footer{
+	margin:0.5em 5em;
 }
 @media all and (max-width: 1180px) {
 	.picture {
