Ajout image coordonné + ajustement css et minifier html

--- a/assets/style.css
+++ b/assets/style.css
@@ -233,7 +233,14 @@ input[type="submit"] {
 	padding: .5em 1em
 }
 footer{
+	display: flex;
+	justify-content: center;
 	margin:0.5em 5em;
+}
+footer img{
+	width: 225px;
+	height: 200px;
+	padding: 0 10px;
 }
 @media all and (max-width: 1180px) {
 	.picture {
